syntax = "proto3";

option csharp_namespace = "GrpcDemo";

package greet;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/wrappers.proto";

message CreateAddressRequest {
    string street = 1;
    string city = 2;
    string state = 3;
    string zip_code = 4;
    string country = 5;
}

message UpdateInvoiceDueDateRequest {
    string invoice_id = 1;
    google.protobuf.Timestamp due_date = 2;
    google.protobuf.Duration grace_period = 3;

}

// Declare decimal value
message DecimalValue {
    // Whole units part of the amount
    int64 units =1;
    // Nano units of the amount (10^-9)
    // must be same sign as units
    sfixed32 nanos =2;
}

// Define the Enum values type
enum InvoiceStatus {
    INVOICE_STATUS_UNKNOWN = 0;
    INVOICE_STATUS_DRAFT = 1;
    INVOICE_STATUS_AWAIT_PAYMENT = 2;
    INVOICE_STATUS_PAID = 3;
    INVOICE_STATUS_OVERDUE = 4;
    INVOICE_STATUS_CANCELLED = 5;
}

message AddInvoiceItemRequest {
    string name = 1;
    string description = 2;
    google.protobuf.DoubleValue unit_price = 3;
    google.protobuf.Int32Value quantity = 4;
    google.protobuf.BoolValue is_taxable = 5;
}

message UpdateBatchInvoiceStatusRequest {
    repeated string invoice_ids = 1;
    InvoiceStatus status = 2;
}

message UpdateInvoiceStatusRequest {
    map<string, InvoiceStatus> invoice_status_map = 1;
}


// Conctact Create Request
message CreateContactRequest {
    string frist_name = 1;
    string last_name = 2;
    string email = 3;
    string phone = 4;
    int32 year_of_birth = 5;
    bool is_active = 6;
}
message CreateContactResponse {
    string contact_id = 1;
}
//Defining a unary service type
// Contact Service
service Contact {
    rpc CreateContact(CreateContactRequest) returns (CreateContactResponse);
}